2010-02-03  Christoph Junghans (ottxor)

	* share/LaTeX/Makefile.am: Fix a logic error in testing the need
	to call texhash.

2010-02-03  Tatsuro Matsuoka  <tmacchant3@yahoo.co.jp>

	* src/command.c (pause_command): Loop of waitforinput() for "pause -1"
	in console mode of Windows.

2010-02-02  Christoph Junghans (ottxor)

	* configure.in share/LaTeX/Makefile.am:
	kpsexpand was used in share/LaTeX/Makefile.am even if it was not
	installed.  Add --texdir=DIR option to configure
	Bug #2934829

2010-02-02  Ethan A Merritt  <merritt@u.washington.edu>

	* src/syscfg.h: Attempt to fix build problem under Sun Studio (no
	definition for _Bool).
	Bug #2915835

2010-02-01  Ethan A Merritt  <merritt@u.washington.edu>

	* term/canvas.trm: Fix typo in javascript output.
	Bug #2943778

2010-02-01  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/command.c (pause_command): Use the default message for Windows
	pause dialog.

2010-01-31  Tatsuro Matsuoka  <tmacchant3@yahoo.co.jp>

	* src/command.c (pause_command): Fixes for pause on Windows with wxt.

	* src/wxterminal/wxt_gui.cpp (wxt_waitforinput): Fix for Windows.

2010-01-29  Ethan A Merritt  <merritt@u.washington.edu>

	* src/scanner.c (scanner): There was no scanner rule covering a token
	starting with '.'. This caused ambiguity in the interpretation of '.E1'.
	Is it a strange representation of 0, or concatenation of a string
	variable E1?  Resolve this with a new rule that a number with an initial
	'.' must continue with a digit.
	Bugfix

2010-01-28  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/command.c (pause_command): Fix "pause mouse" for gnuplot.exe on
	Windows.

2010-01-27  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/version.c: gnuplot_patchlevel[] should be 0-rc1 not rc1.

2010-01-25  Ethan A Merritt  <merritt@u.washington.edu>

	* INSTALL: Add section explaining the libreadline problem on OSX.

2010-01-25  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/win/wgraph.c (drawgraph pattern_bitmaps): Synchronize fill