@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 dnl configure.in for gnuplot on Unix.
 dnl
-dnl $Id: configure.in,v 1.248.2.9 2010/02/03 05:17:29 sfeam Exp $
+dnl $Id: configure.in,v 1.248.2.10 2010/02/07 23:17:34 sfeam Exp $
 dnl
 dnl AC_INIT must match the release number
 AC_INIT(gnuplot, 4.4.0-rc1)
@@ -94,6 +94,13 @@ if test "$no_x" != yes; then
   AC_DEFINE(X11,1,[ Define if you are using the X11 window system. ])
 fi
 AM_CONDITIONAL(BUILD_GNUPLOT_X11, test "$no_x" != yes)
+
+dnl change location of X11 defaults
+AC_ARG_WITH(x-app-defaultdir,dnl
+[  --with-x-app-defaultdir=DIR       location of X11 application defaults
+                          (default SYSCONFDIR/X11/app-defaults/PACKAGE/VERSION)],
+  X11_APPDEFAULTS_DIR="$withval",
+  X11_APPDEFAULTS_DIR="$sysconfdir/X11/app-defaults/$PACKAGE/$VERSION_MAJOR")
 
 dnl Operating systems.
 dnl FIXME AC_DEFINE(ISC22)
@@ -1068,6 +1075,7 @@ AC_SUBST(LINUXSUID)
 AC_SUBST(TERMLIBS)
 AC_SUBST(TERMXLIBS)
 AC_SUBST(TUTORIAL)
+AC_SUBST(X11_APPDEFAULTS_DIR)
 
 dnl Write Makefiles and configuration header
 AC_OUTPUT([Makefile
@@ -1127,6 +1135,7 @@ if test "$no_x" != yes; then
   else
     AC_MSG_RESULT([    (without binary polygon protocol )])
   fi
+  AC_MSG_RESULT([    (with application defaults, in $X11_APPDEFAULTS_DIR)])
 else
     AC_MSG_RESULT([  X Window System terminal: no (requires X libraries)])
 fi
