@@ -1,3 +1,9 @@
+2010-02-07  Christoph Junghans (ottxor)
+
+	* configure.in share/Makefile.am src/Makefile.am src/gplt_x11.c
+	src/variable.c: Configurable X11 application resource path.
+	Bug #2931287
+
 2010-02-03  Christoph Junghans (ottxor)
 
 	* share/LaTeX/Makefile.am: Fix a logic error in testing the need
